--- a/week6/styles/styles.css
+++ b/week6/styles/styles.css
@@ -20,6 +20,10 @@ li {
     list-style: none;
 }
 
+li.hidden {
+    display: none;
+}
+
 .all,
 .active,
 .completed {
@@ -67,8 +71,9 @@ li {
     margin: 10px 0;
 }
 .mainAndFooter {
+    width: minmax(90vw);
     border: 2px solid black;
-    margin: 0 35vw;
+    margin: 0 20vw;
     padding: 30px;
     border-radius: 5px;
 }
